--- a/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
+++ b/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
@@ -17,9 +17,25 @@
                  </ul>
                  </li>
             }
-            <li>
-                @Html.ActionLink("Gallery" ,"GalleryView", "Account")
+            @if (User.IsInRole("User"))
+            {
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pictures<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>@Html.ActionLink("Gallery", "Gallery", "ImageGallery")</li>
+                    </ul>
+                </li>
+            }
+           @if (User.IsInRole("Admin"))
+           {
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pictures<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>@Html.ActionLink("Gallery", "Gallery", "ImageGallery")</li>
+                    <li>@Html.ActionLink("Upload", "Upload", "ImageGallery")</li>
+                </ul>
             </li>
+           }
             <li>
                 @Html.ActionLink("Create", "Create", "Article")
             </li>
