Made BY:P.L.A.M.E.N and S.T.E.F.A.N

--- a/BlogSoftUni/Views/Article/Delete.cshtml
+++ b/BlogSoftUni/Views/Article/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Delete Article</h2>
+        <h2 style="font-family: Impact, Charcoal, sans-serif; color: #ce1215;" > Delete Article</h2>
         @using (Html.BeginForm("Delete", "Article", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             @Html.AntiForgeryToken()
