--- a/BlogSoftUni/Content/bootstrap.css
+++ b/BlogSoftUni/Content/bootstrap.css
@@ -18,6 +18,8 @@ body {
     padding-bottom: 20px;
 }
 
+
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -1128,13 +1130,13 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #18bc9c;
+  color: #71a3f2;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #18bc9c;
-  text-decoration: underline;
+    color: #5179ba;
+  text-decoration: none;
 }
 a:focus {
   outline: 5px auto -webkit-focus-ring-color;
@@ -1615,6 +1617,7 @@ pre code {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+    margin-top: 13px;
 }
 @media (min-width: 768px) {
   .container {
@@ -1640,7 +1643,13 @@ pre code {
 .row {
   margin-left: -15px;
   margin-right: -15px;
-   
+    background-image:url("art.jpeg");
+    height: 700px;
+    margin-top: 20px;
+}
+.element {
+    float: left;
+    width: 30px;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
@@ -1828,12 +1837,13 @@ pre code {
   }
   .col-sm-6 {
     width: 50%;
+     
   }
   .col-sm-5 {
     width: 41.66666667%;
   }
   .col-sm-4 {
-    width: 33.33333333%;
+      width: 250px;
   }
   .col-sm-3 {
     width: 25%;
@@ -3202,26 +3212,26 @@ fieldset[disabled] .btn-primary.focus {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #11FF00;
-  border-color: #18bc9c;
+  background-color: #345a96;
+  border-color: #345a96;
 }
 .btn-success:focus,
 .btn-success.focus {
   color: #ffffff;
-  background-color: #128f76;
-  border-color: #0a4b3e;
+  background-color:#1e3459;
+  border-color:#1e3459;
 }
 .btn-success:hover {
   color: #ffffff;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color:#1e3459;
+  border-color:#1e3459;
 }
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color: #345a96;
+  border-color: #345a96;
 }
 .btn-success:active:hover,
 .btn-success.active:hover,
@@ -3233,8 +3243,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
   color: #ffffff;
-  background-color: #0e6f5c;
-  border-color: #0a4b3e;
+  background-color: #345a96;
+  border-color: #345a96;
 }
 .btn-success:active,
 .btn-success.active,
@@ -3250,28 +3260,28 @@ fieldset[disabled] .btn-success:focus,
 .btn-success.disabled.focus,
 .btn-success[disabled].focus,
 fieldset[disabled] .btn-success.focus {
-  background-color: #18bc9c;
-  border-color: #18bc9c;
+  background-color: #345a96;
+  border-color: #345a96;
 }
 .btn-success .badge {
-  color: #18bc9c;
+  color: #345a96;
   background-color: #ffffff;
 }
 .btn-info {
   color: #ffffff;
-  background-color: #8B49C4;
-  border-color: #3498db;
+  background-color: #345a96;
+  border-color: #345a96;
 }
 .btn-info:focus,
 .btn-info.focus {
   color: #ffffff;
-  background-color: #217dbb;
-  border-color: #16527a;
+  background-color: #1e3459;
+  border-color:#1e3459;
 }
 .btn-info:hover {
   color: #ffffff;
-  background-color: #217dbb;
-  border-color: #2077b2;
+  background-color:#1e3459;
+  border-color:#1e3459;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3290,8 +3300,8 @@ fieldset[disabled] .btn-success.focus {
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
   color: #ffffff;
-  background-color: #1c699d;
-  border-color: #16527a;
+  background-color: #1e3459;
+  border-color: #1e3459;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3373,26 +3383,27 @@ fieldset[disabled] .btn-warning.focus {
 }
 .btn-danger {
   color: #ffffff;
-  background-color: #8900FF;
-  border-color: #e74c3c;
+  background-color: #ce1215;
+    border-color: #ce1215;
 }
 .btn-danger:focus,
 .btn-danger.focus {
   color: #ffffff;
-  background-color: #41007A;
-  border-color: #921e12;
+  background-color: #720c0e;
+  border-color: #720c0e;
 }
 .btn-danger:hover {
   color: #ffffff;
-  background-color: #41007A;
-  border-color: #cd2a19;
+   
+  background-color: #720c0e;
+  border-color: #720c0e;
 }
 .btn-danger:active,
 .btn-danger.active,
 .open > .dropdown-toggle.btn-danger {
   color: #ffffff;
-  background-color: #d62c1a;
-  border-color: #cd2a19;
+  background-color: #720c0e;
+  border-color: #720c0e;
 }
 .btn-danger:active:hover,
 .btn-danger.active:hover,
@@ -3404,8 +3415,8 @@ fieldset[disabled] .btn-warning.focus {
 .btn-danger.active.focus,
 .open > .dropdown-toggle.btn-danger.focus {
   color: #ffffff;
-  background-color: #b62516;
-  border-color: #921e12;
+  background-color: #720c0e;
+  border-color: #720c0e;
 }
 .btn-danger:active,
 .btn-danger.active,
@@ -3421,11 +3432,11 @@ fieldset[disabled] .btn-danger:focus,
 .btn-danger.disabled.focus,
 .btn-danger[disabled].focus,
 fieldset[disabled] .btn-danger.focus {
-  background-color: #e74c3c;
-  border-color: #e74c3c;
+  background-color: #720c0e;
+  border-color: #720c0e;
 }
 .btn-danger .badge {
-  color: #e74c3c;
+  color: #720c0e;
   background-color: #ffffff;
 }
 .btn-link {
@@ -3559,6 +3570,7 @@ tbody.collapse.in {
   margin: 2px 0 0;
   list-style: none;
   font-size: 15px;
+  font-family: Impact, Charcoal, sans-serif;  /* tuka e bil plamen */
   text-align: left;
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -4523,32 +4535,34 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #3A1858;
+  background-color:#000;
+  height: 90px;
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: #B8F5B3;
+  color: #fff;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #18bc9c;
+  color:#7da6e8;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #11FF00;
+  color: #fff;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #11FF00;
+  font-family: Impact, Charcoal, sans-serif;
+  color: #fff;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #18bc9c;
+  color:#7da6e8;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #11FF00;
+  color:#7da6e8;
   background-color: #1a242f;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -4575,7 +4589,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   background-color: #1a242f;
-  color: #ffffff;
+  color: #7da6e8;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -4583,13 +4597,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #18bc9c;
+    color: #fff;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ffffff;
+    color: #6490d6;
     background-color: #1a242f;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
@@ -4603,14 +4617,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #ffffff;
 }
 .navbar-default .navbar-link:hover {
-  color: #18bc9c;
+  color: #fff;
 }
 .navbar-default .btn-link {
   color: #ffffff;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #18bc9c;
+  color: #fff;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
@@ -4619,7 +4633,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #cccccc;
 }
 .navbar-inverse {
-  background-color: #18bc9c;
+  background-color: #fff;
   border-color: transparent;
 }
 .navbar-inverse .navbar-brand {
@@ -4645,7 +4659,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #ffffff;
-  background-color: #15a589;
+  background-color: #fff;
 }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
@@ -4654,7 +4668,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   background-color: transparent;
 }
 .navbar-inverse .navbar-toggle {
-  border-color: #128f76;
+  border-color: #fff;
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
@@ -5848,9 +5862,12 @@ button.list-group-item-danger.active:focus {
 }
 .well {
   min-height: 20px;
+    width: 60%;
+    margin: auto;
+  margin-top: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #B8F5B3;
+  background-color: #7da6e8;
   border: 1px solid transparent;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
