--- a/BlogSoftUni/Views/Article/Create.cshtml
+++ b/BlogSoftUni/Views/Article/Create.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Create Article</h2>
+        <h2 style="font-family: Impact, Charcoal, sans-serif; color:#fff ">Create Article</h2>
         @using (Html.BeginForm("Create", "Article", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             @Html.AntiForgeryToken()
