--- a/BlogSoftUni/Views/Home/ListCategories.cshtml
+++ b/BlogSoftUni/Views/Home/ListCategories.cshtml
@@ -3,20 +3,23 @@
 @{
     ViewBag.Title = "List";
 }
-
-<div class="container">
+    <div class="container">
     <div class="row">
-        @foreach (var category in Model)
-        {
-            <div class="col-sm-6 text-center text-uppercase">
-                <p>
-                    <h2>
-                        @Html.ActionLink(string.Format($"{category.Name} ({category.Articles.Count})"),
-                        "ListArticles", "Home", new { @categoryId = category.Id }, null)
-                </h2>
-            </p>
+        <div class="element">
+            @foreach (var category in Model)
+            {
+                <div class="col-sm-6 text-left text-uppercase">
+                    <p>
+                       
+                            <h2>
+                                @Html.ActionLink(string.Format($"{category.Name} ({category.Articles.Count})"),
+                                "ListArticles", "Home", new { @categoryId = category.Id }, null)
+                            </h2>
+                        
+                    </p>
+                </div>
+            }
         </div>
-        }
     </div>
-</div>
-<hr />
+        </div>
+    <hr />
