--- a/BlogSoftUni/Views/ImageGallery/Gallery.cshtml
+++ b/BlogSoftUni/Views/ImageGallery/Gallery.cshtml
@@ -11,29 +11,35 @@
         @Html.ActionLink("Upload New", "Upload")
     }
 </p>
-@*Here i will show the Uploaded images*@
-<table>
-    @{
-        int j = 0;
-        for (int i = 0; i < Model.Count(); i++)
-        {
-            j = i;
-            <tr>
-                @*I Have done this for show 4 images in a Row*@
-                @while (j < i + 4 && j < Model.Count())
+<div class="container">
+    <div class="well">
+        @*Here i will show the Uploaded images*@
+        <table>
+            @{
+                int j = 0;
+                for (int i = 0; i < Model.Count(); i++)
                 {
-                    <td>
-                        <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData,0, Model[j].ImageData.Length)" width="300" />
-                    </td>
-                    j++;
+                    j = i;
+                    <tr>
+                        @*I Have done this for show 4 images in a Row*@
+                        @while (j < i + 4 && j < Model.Count())
+                {
+                            <td>
+                                <img src="data:image/png;base64,@Convert.ToBase64String(Model[j].ImageData,0, Model[j].ImageData.Length)" width="300" />
+                            </td>
+                            j++;
+                        }
+                    </tr>
                 }
-            </tr>
-        }
-    } 
-</table>
-<p>
-    @if (User.IsInRole("Admin"))
-    {     
-        @Html.ActionLink("Delete", "Delete")
-    }
-</p>
+            }
+        </table>
+        <p>
+           
+        </p>
+
+    </div>
+</div>
+@if (User.IsInRole("Admin"))
+            {
+    @Html.ActionLink("Delete", "Delete")
+}
