--- a/BlogSoftUni/Content/bootstrap.css
+++ b/BlogSoftUni/Content/bootstrap.css
@@ -17,8 +17,7 @@ body {
     padding-top: 70px;
     padding-bottom: 20px;
 }
-
-
+ 
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
@@ -1643,13 +1642,17 @@ pre code {
 .row {
   margin-left: -15px;
   margin-right: -15px;
-    background-image:url("art.jpeg");
-    height: 700px;
+    /*background-image:url("http://static.superiorwallpapers.com/images/lthumbs/2015-06/8383_Dumbbells-in-a-gym.jpg");
+    background-size:100% 300px;
+    background-repeat:no-repeat;
+    */
+    background-color:#2c3e50;
     margin-top: 20px;
 }
 .element {
     float: left;
-    width: 30px;
+    width:500px;
+    padding-top:50px;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
@@ -1819,6 +1822,7 @@ pre code {
   }
   .col-sm-12 {
     width: 100%;
+    color:#000;
   }
   .col-sm-11 {
     width: 91.66666667%;
@@ -1836,8 +1840,19 @@ pre code {
     width: 58.33333333%;
   }
   .col-sm-6 {
-    width: 50%;
-     
+    font-family:Impact;
+    letter-spacing:3px;
+    width:500px;
+    height: 50px;   
+  }
+  .col-sm-6 a{              /* EDITED CUSTOM*/
+      color:#fff;
+      transition:0.2s;
+  }
+  .col-sm-6 a:hover{
+      color:#71a3f2;
+      transition:0.2s;
+      letter-spacing:10px;
   }
   .col-sm-5 {
     width: 41.66666667%;
@@ -2551,6 +2566,7 @@ label {
   margin-bottom: 5px;
   font-weight: bold;
 }
+ 
 input[type="search"] {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -2562,8 +2578,9 @@ input[type="checkbox"] {
   margin-top: 1px \9;
   line-height: normal;
 }
-input[type="file"] {
-  display: block;
+input[type="file"] {   
+     color:#fff;
+     display: block;
 }
 input[type="range"] {
   display: block;
@@ -3027,6 +3044,11 @@ select[multiple].input-lg {
 }
 .form-horizontal .has-feedback .form-control-feedback {
   right: 15px;
+}
+.form-horizontal{  /* CUSTOM EDIT 2*/
+    font-size:15px;
+    color:#fff;
+
 }
 @media (min-width: 768px) {
   .form-horizontal .form-group-lg .control-label {
@@ -4218,7 +4240,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-header {
+    
     float: left;
+    width: 25%;
   }
 }
 .navbar-collapse {
@@ -4229,6 +4253,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch;
+  background-color:#000;
+ 
 }
 .navbar-collapse.in {
   overflow-y: auto;
@@ -4319,6 +4345,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size: 19px;
   line-height: 21px;
   height: 60px;
+  background-image: url(http://i.imgur.com/dCaNQWr.png);
+  background-repeat: no-repeat;
+  background-size: 180px 65px;
+  width:160px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -5867,7 +5897,7 @@ button.list-group-item-danger.active:focus {
   margin-top: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #7da6e8;
+  background-color: #404e66;
   border: 1px solid transparent;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
