--- a/BlogSoftUni/Views/Account/Login.cshtml
+++ b/BlogSoftUni/Views/Account/Login.cshtml
@@ -6,15 +6,15 @@
 <div class="container">
     <div class="well">
 
-        <h2>@ViewBag.Title.</h2>
-        <div class="row">
-            <div class="col-sm-4">
+        <h2 style="color:#fff;">@ViewBag.Title</h2>
+        <div class="row" >
+            <div style=" padding-top:20px; width:80%; margin:auto;" class="col-sm-4">
                 <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
+                    {
                         @Html.AntiForgeryToken()
-                        <h4>Use a local account to log in.</h4>
-                        <hr />
+                        
+                       
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(m => m.Email, new { @class = "col-sm-4 control-label" })
@@ -32,7 +32,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-4 col-sm-4">
-                                <div class="checkbox">
+                                <div style="float:right;" class="checkbox">
                                     @Html.CheckBoxFor(m => m.RememberMe)
                                     @Html.LabelFor(m => m.RememberMe)
                                 </div>
@@ -40,24 +40,20 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-4 col-sm-4">
-                                <input type="submit" value="Log in" class="btn btn-default" />
+                                <input type="submit" value="Log in" style="float:right; width:150px;" class=" btn btn-default" />
                             </div>
                         </div>
                         <p>
                             @Html.ActionLink("Register as a new user", "Register")
                         </p>
                         @* Enable this once you have account confirmation enabled for password reset functionality
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        </p>*@
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
                     }
                 </section>
             </div>
-            <div class="col-sm-4">
-                <section id="socialLoginForm">
-                    @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-                </section>
-            </div>
+            
         </div>
     </div>
 </div>
