--- a/BlogSoftUni/Views/Account/Register.cshtml
+++ b/BlogSoftUni/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="container">
     <div class="well">
-        <h2>@ViewBag.Title.</h2>
+        <h2 style="color:#fff;">@ViewBag.Title</h2>
 
         @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-4">
-                    <input type="submit" class="btn btn-default" value="Register" />
+                    <input type="submit" style="width:170px; float:right;" class="btn btn-default" value="Register" />
                 </div>
             </div>
         }
