--- a/BlogSoftUni/Views/Category/List.cshtml
+++ b/BlogSoftUni/Views/Category/List.cshtml
@@ -6,14 +6,14 @@
 
 <div class="container">
     <div class="well">
-        <h2>All Categories - @Html.ActionLink("Create", "Create", "Category", null, new { @class = "btn btn-warning" })</h2>
+        <h2 style="color:#fff">All Categories - @Html.ActionLink("Create", "Create", "Category", null, new { @class = "btn btn-success" })</h2>
         <div class="row">
             <table class="table table-striped table-hover col-sm-12">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Actions</th>
+                        <th style="color:#fff">#</th>
+                        <th style ="color:#fff">Name</thstyle>
+                        <th style="color:#fff">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -23,7 +23,7 @@
                             <td>@category.Id</td>
                             <td>@category.Name</td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", "Category", new { @id = category.Id }, null)
+                                @Html.ActionLink("Edit", "Edit", "Category", new { @id = category.Id}, null)
                                 @Html.ActionLink("Delete", "Delete", "Category", new { @id = category.Id }, null)
                             </td>
                         </tr>
