--- a/BlogSoftUni/Views/Shared/_Layout.cshtml
+++ b/BlogSoftUni/Views/Shared/_Layout.cshtml
@@ -12,18 +12,22 @@
     <div class="navbar navbar-default navbar-fixed-top">
             <div class="container" >
                 <div class="navbar-header">
+                    
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Spartans Pro-Athlete ", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+                    @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
+                
                 <div class="navbar-collapse collapse">
                     @Html.Partial("_LoginPartial")
                 </div>
+                
             </div>
         </div>  
+   
         @RenderBody();
         <footer class="pull-right">
             <p>&copy; @DateTime.Now.Year - Apolon Team &trade;</p>
