--- a/BlogSoftUni/Views/User/List.cshtml
+++ b/BlogSoftUni/Views/User/List.cshtml
@@ -6,14 +6,14 @@
 
 <div class="container">
     <div class="well">
-        <h2>Users</h2>
+        <h2 style="color: #fff" >Users</h2>
 
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Email</th>
-                    <th>Actions</th>
+                    <th style="color: #ffF">ID</th>
+                    <th style="color: #ffF">Email</th>
+                    <th style="color: #ffF">Actions</th>
                 </tr>
             </thead>
 
@@ -29,9 +29,9 @@
                     @:<tr>
                    }
 
-   
-                <td>@user.Id</td>
-                <td>@user.Email</td>
+
+                <td style="color: #000; ">@user.Id</td>
+                <td style="color: #000; ">@user.Email</td>
                 <td>
                         @Html.ActionLink("Edit", "Edit", "User", new { @id = user.Id }, null)
                         @Html.ActionLink("Delete", "Delete", "User", new { @id = user.Id }, null)
