Design changes and bug fixes.

--- a/BlogSoftUni/Views/Home/ListCategories.cshtml
+++ b/BlogSoftUni/Views/Home/ListCategories.cshtml
@@ -6,6 +6,7 @@
     <div class="container">
     <div class="row">
         <div class="element">
+            <h2 style="font-family:Impact; padding-left:15px; padding-bottom:20px; color:#fff;">Categories</h2>
             @foreach (var category in Model)
             {
                 <div class="col-sm-6 text-left text-uppercase">                                                      
@@ -16,4 +17,3 @@
         </div>
     </div>
         </div>
-    <hr />
