--- a/BlogSoftUni/Views/Article/Details.cshtml
+++ b/BlogSoftUni/Views/Article/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<div class="container">
+<div style=" color:white; padding: 20; background-color: #2c3e50; "class="container">
     <article>
         <header>
             <h2>
@@ -27,4 +27,3 @@
         </footer>
     </article>
 </div>
-<hr />
