--- a/BlogSoftUni/Views/Home/ListArticles.cshtml
+++ b/BlogSoftUni/Views/Home/ListArticles.cshtml
@@ -5,17 +5,17 @@
 }
 
 <div class="container">
-    <div class="row">
+    <div style=" height:500px;"class="row">
         @foreach (var article in Model)
         {
-            <div class="col-sm-6">
+            <div style="color:white;" class="col-sm-6">
                 <article>
                     <header>
-                        <h2>
+                        <h2 style="font-family:Impact;">
                             @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
                         </h2>
                     </header>
-                    <p>
+                    <p style="border: 2px dotted white;">
                         @article.Content
                     </p>
                     <footer class="pull-right">
@@ -28,4 +28,4 @@
         }
     </div>
 </div>
-<hr />
+
