--- a/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
+++ b/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                     <li>@Html.ActionLink("Users", "List", "User")</li>
-                    <li>@Html.ActionLink("Categories", "List", "Category")</li>
+                    <li>@Html.ActionLink("Create Categorie", "List", "Category")</li>
                  </ul>
                  </li>
             }
@@ -25,6 +25,7 @@
                         <li>@Html.ActionLink("Gallery", "Gallery", "ImageGallery")</li>
                     </ul>
                 </li>
+             
             }
            @if (User.IsInRole("Admin"))
            {
@@ -36,6 +37,9 @@
                 </ul>
             </li>
            }
+            <li>
+                @Html.ActionLink("Categories","ListCategories", "Home")
+            </li>
             <li>
                 @Html.ActionLink("Create", "Create", "Article")
             </li>
