--- a/BlogSoftUni/Views/Article/List.cshtml
+++ b/BlogSoftUni/Views/Article/List.cshtml
@@ -5,34 +5,36 @@
 }
 
 <div class="container">
-    <div class="row">
+    <div style=" color:white; " class="row">
         @foreach (var article in Model)
-        {
-            <div class="col-sm-6">
-                <article>
-                    <header>
-                        <h2>
-                            @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
-                        </h2>
-                    </header>
-                    <p> 
-                        @article.Content
-                    </p>
-                    <footer>
-                        <div class="pull-left">
-                            @foreach (var tag in article.Tags)
-                            {
-                                @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
-                            }
-                        </div>
-                        <small class="author pull-right">
-                            --author @article.Author.FullName
-                        </small>
-                    </footer>
-
-                </article>
+{
+    <div style="margin-top:30px; border: 3px solid white; font-family: Arial; " >
+        <article>
+            <header>
+                <h2>
+                    @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
+                </h2>
+            </header>
+            <p>
+                @article.Content
+            </p>
+            <div class="pull-left">
+                @foreach (var tag in article.Tags)
+                {
+                    @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
+                }
             </div>
-        }
+
+            <footer>
+               
+                <small class="author pull-right">
+                    --author @article.Author.FullName
+                </small>
+            </footer>
+
+        </article>
+    </div>
+}
     </div>
 </div>
-<hr />
+
