--- a/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
+++ b/BlogSoftUni/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                     <li>@Html.ActionLink("Users", "List", "User")</li>
-                    <li>@Html.ActionLink("Create Categorie", "List", "Category")</li>
+                    <li>@Html.ActionLink("Create Category", "List", "Category")</li>
                  </ul>
                  </li>
             }
